--- a/loan-calculator/index.html
+++ b/loan-calculator/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Loan Calculator</title>
+    <style>
+        #loading, #results {
+            display: none;
+        }
+    </style>
 </head>
 <body class="bg-dark">
 <div class="container">
@@ -40,9 +45,9 @@
                     </div>
                 </form>
                 <!--LOADER HERE-->
-                <!--<div id="loading">-->
-                    <!--<img src="img/loading.gif" alt="">-->
-                <!--</div>-->
+                <div id="loading">
+                    <img src="img/loading.gif" alt="">
+                </div>
                 <!--RESULTS-->
                 <div id="results" class="pt-4">
                     <h5>Results</h5>
