--- a/weather-js/index.html
+++ b/weather-js/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="https://bootswatch.com/4/lumen/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.css">
     <title>Weather.js</title>
+    <style>
+        .wi {
+            font-size: 40px;
+        }
+    </style>
 </head>
 <body>
 
@@ -16,11 +21,9 @@
                 <h1 id="w-location"></h1>
                 <h3 class="text-dark" id="w-desc"></h3>
                 <h3 id="w-string"></h3>
-                <img id="w-icon">
+                <i id="w-icon"></i>
                 <ul class="list-group mt-3" id="w-details">
                     <li class="list-group-item" id="w-humidity"></li>
-                    <li class="list-group-item" id="w-dewpoint"></li>
-                    <li class="list-group-item" id="w-feels-like"></li>
                     <li class="list-group-item" id="w-wind"></li>
                 </ul>
                 <hr>
