--- a/calorie-tracker/index.html
+++ b/calorie-tracker/index.html
@@ -10,64 +10,70 @@
 </head>
 <body>
 
-    <nav>
-        <div class="nav-wrapper blue">
-            <div class="container">
-                <a href="#" class="brand-logo center">Calorie Tracker</a>
-                <ul class="right">
-                    <li><a href="#" class="clear-btn btn blue lighten-3">Clear All</a></li>
-                </ul>
-            </div>
+<nav>
+    <div class="nav-wrapper blue">
+        <div class="container">
+            <a href="#" class="brand-logo center">Calorie Tracker</a>
+            <ul class="right">
+                <li><a href="#" class="clear-btn btn blue lighten-3">Clear All</a></li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav>
 
-    <br>
+<br>
 
-    <div class="container">
-        <div class="card">
-            <div class="card-content">
-                <span class="card-title">Add Meal / Food Item</span>
-                <form class="col">
-                    <div class="row">
-                        <div class="input-field col s6">
-                            <input type="text" id="item-name" placeholder="Add Item">
-                            <label for="item-name">Meal</label>
-                        </div>
-                        <div class="input-field col s6">
-                            <input type="number" id="item-calories" placeholder="Add Calories">
-                            <label for="item-calories">Calories</label>
-                        </div>
+<div class="container">
+    <div class="card">
+        <div class="card-content">
+            <span class="card-title">Add Meal / Food Item</span>
+            <form class="col">
+                <div class="row">
+                    <div class="input-field col s6">
+                        <input type="text" id="item-name" placeholder="Add Item">
+                        <label for="item-name">Meal</label>
+                    </div>
+                    <div class="input-field col s6">
+                        <input type="number" id="item-calories" placeholder="Add Calories">
+                        <label for="item-calories">Calories</label>
+                    </div>
+                    <div class="input-field col s6">
                         <button class="add-btn btn blue darken-3"><i class="fa fa-plus"></i> Add Meal</button>
                         <button class="update-btn btn orange"><i class="fa fa-pencil-square-o"></i> Update Meal</button>
                         <button class="delete-btn btn red"><i class="fa fa-remove"></i> Delete Meal</button>
-                        <button class="back-btn btn grey pull-right"><i class="fa fa-chevron-circle-left"></i> Back</button>
                     </div>
-                </form>
-            </div>
+                    <div class="input-field col s6">
+                        <button class="back-btn btn grey pull-right"><i class="fa fa-chevron-circle-left"></i> Back
+                        </button>
+                    </div>
+                </div>
+            </form>
         </div>
-
-        <h3 class="center-align">Total Calories: <span class="total-calories">0</span></h3>
-
-        <ul id="item-list" class="collection">
-            <!-- Sample li -->
-            <!-- <li class="collection-item" id="item-0">
-                <strong>Steak Dinner: </strong> <em>600 Calories</em>
-                <a href="#" class="secondary-content"><i class="fa fa-pencil"></i></a>
-            </li>
-            <li class="collection-item" id="item-0">
-                <strong>Cookie: </strong> <em>200 Calories</em>
-                <a href="#" class="secondary-content"><i class="fa fa-pencil"></i></a>
-            </li>
-            <li class="collection-item" id="item-0">
-                <strong>Eggs: </strong> <em>300 Calories</em>
-                <a href="#" class="secondary-content"><i class="fa fa-pencil"></i></a>
-            </li> -->
-        </ul>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    <h3 class="center-align">Total Calories: <span class="total-calories">0</span></h3>
+
+    <ul id="item-list" class="collection">
+        <!-- Sample li -->
+        <!-- <li class="collection-item" id="item-0">
+            <strong>Steak Dinner: </strong> <em>600 Calories</em>
+            <a href="#" class="secondary-content"><i class="fa fa-pencil"></i></a>
+        </li>
+        <li class="collection-item" id="item-0">
+            <strong>Cookie: </strong> <em>200 Calories</em>
+            <a href="#" class="secondary-content"><i class="fa fa-pencil"></i></a>
+        </li>
+        <li class="collection-item" id="item-0">
+            <strong>Eggs: </strong> <em>300 Calories</em>
+            <a href="#" class="secondary-content"><i class="fa fa-pencil"></i></a>
+        </li> -->
+    </ul>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
-    <script src="app.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
